--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 /__pycache__
 /flaskblog/__pycache__
 /venv
+flaskblog/__pycache__/forms.cpython-38.pyc
+flaskblog/__pycache__/models.cpython-38.pyc
+flaskblog/__pycache__/routes.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/codec.py
+venv/lib/python3.8/site-packages/idna/compat.py
+venv/lib/python3.8/site-packages/idna/core.py
+venv/lib/python3.8/site-packages/idna/idnadata.py
+venv/lib/python3.8/site-packages/idna/package_data.py
+venv/lib/python3.8/site-packages/idna/uts46data.py
+venv/lib/python3.8/site-packages/idna/__pycache__/__init__.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/codec.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/compat.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/intranges.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/package_data.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/uts46data.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/INSTALLER
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/LICENSE.md
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/METADATA
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/RECORD
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/top_level.txt
+venv/lib/python3.8/site-packages/idna-3.1.dist-info/WHEEL
