--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/intranges.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/package_data.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/__init__.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/intranges.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/package_data.cpython-38.pyc
