--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,7 @@ celerybeat-schedule
 .venv
 env/
 venv/
+venv/*
 ENV/
 env.bak/
 venv.bak/
@@ -125,6 +126,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+venv/lib/python3.8/site-packages/idna/__pycache__/__init__.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/intranges.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/package_data.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/__init__.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/intranges.cpython-38.pyc
+venv/lib/python3.8/site-packages/idna/__pycache__/package_data.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/__init__.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/core.cpython-38.pyc
 venv/lib/python3.8/site-packages/idna/__pycache__/idnadata.cpython-38.pyc
