--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ flask-login = "^0.6.2"
 flask-bcrypt = "^1.0.1"
 flask-wtf = "^1.0.1"
 email-validator = "^1.3.0"
+websockets = "^10.4"
+pydantic = "^1.10.4"
+pycryptodome = "^3.16.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
