--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ email-validator = "^1.3.0"
 websockets = "^10.4"
 pydantic = "^1.10.4"
 pycryptodome = "^3.16.0"
+qrcode = "^7.3.1"
+pillow = "^9.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
